[package]
name = "see_derive"
version = "0.0.2"
edition = "2021"
license-file = "../LICENSE"
description = "A sub-module for providing proc-macros for the main trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"
